CI CD website project update

--- a/index.html
+++ b/index.html
@@ -83,17 +83,27 @@
         <h2 class="section-title fade-in">My Projects</h2>
         <div class="projects-grid">
           <div class="project-card fade-in">
-            <h3>tbc</h3>
-            <p>tbc</p>
+            <h3>CI/CD Pipeline for my site</h3>
+            <p>
+              This current website is built with a fully automated CI/CD
+              pipeline. It uses Github Actions, when i push code onto my main
+              branch it will autaomatiically deploy it to my Github Pages.
+              Helping avoid manual deployment steps and human errors, also
+              ensures my site is in sync with the latest version
+            </p>
             <div class="tech-stack">
-              <span class="tech-tag">tbc</span>
-              <span class="tech-tag">tbc</span>
-              <span class="tech-tag">tbc</span>
-              <span class="tech-tag">tbc</span>
+              <span class="tech-tag">Git</span>
+              <span class="tech-tag">Github Actions</span>
+              <span class="tech-tag">Github Pages</span>
+              <span class="tech-tag">YAML</span>
             </div>
             <div class="project-links">
               <a href="#" class="project-link">Documentation</a>
-              <a href="#" class="project-link">GitHub</a>
+              <a
+                href="https://github.com/wegoagain00/my-devops-site"
+                class="project-link"
+                >GitHub</a
+              >
             </div>
           </div>
 
