--- a/index.html
+++ b/index.html
@@ -3,176 +3,148 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Tawfiq's (wegoagain) site</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <div class="loading-screen">
-      <div class="loader"></div>
-    </div>
-    <header>
-      <nav class="container">
-        <a href="#" class="logo">
-          <span class="logo-icon">⚡</span>
-          <span class="logo-text">My DevOps Life</span>
-        </a>
-        <ul class="nav-links">
-          <li><a href="#home" class="nav-link active">Home</a></li>
-          <li><a href="#about" class="nav-link">About</a></li>
-          <li><a href="#projects" class="nav-link">Projects</a></li>
-          <li><a href="#contact" class="nav-link">Contact</a></li>
-        </ul>
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </nav>
-    </header>
+    <div class="container">
+      <header>
+        <h1>Tawfiq aka wegoagain</h1>
+      </header>
 
-    <section id="home" class="hero">
-      <div class="hero-content">
-        <h1>DevOps Engineer</h1>
-        <p>
-          Welcome to my Journey of DevOps! Click below to view my projects and
-          learn more about me!
-        </p>
-        <a href="#about" class="cta-button">View My Work</a>
-      </div>
-    </section>
+      <main>
+        <img
+          src="/Work Working GIF by Alliance.gif"
+          alt="Description"
+          style="
+            display: block;
+            margin: 16px auto;
+            width: 250px;
+            max-width: 100%;
+          "
+        />
+        <section id="about" class="section active">
+          <p class="greeting">
+            Hello 👋 I'm
+            <a
+              href="https://github.com/wegoagain00"
+              style="color: white"
+              target="_blank"
+              >Tawfiq</a
+            >.
+          </p>
+          <p class="intro">
+            I'm a passionate DevOps engineer, technology enthusiast and computer
+            science graduate. My interests revolve around cloud infrastructure,
+            automation, containerization, and building scalable systems. I build
+            useful projects that solve real-world problems. When I'm not coding,
+            you'll find me exploring new technologies, contributing to
+            open-source projects, reading tech blogs, staying fit
+            (gym/football).
+          </p>
+          <p class="current">
+            Keep a lookout for my upcoming blog to discuss every project I'll be
+            making 👀. I'm currently upskilling and mastering Docker, Kubernetes
+            and Terraform and experimenting with the latest DevOps tools and
+            practices.
+          </p>
+          <p class="current">
+            Feel free to connect with me on social media or drop me an email.
+            I'm always open to discussing new ideas, collaborations, and
+            opportunities.
+          </p>
 
-    <section id="about" class="about">
-      <div class="container">
-        <h2 class="section-title fade-in">About Me</h2>
-        <div class="about-content">
-          <div class="about-text fade-in">
-            <p>
-              Hello, My name is Tawfiq and I'm a passionate DevOps engineer with
-              a strong passion for automation, cloud technologies and continuous
-              improvement. Im currently building my skills in many tools such as
-              Docker, CI/CD pipelines and infrastructure as code. I'm excited to
-              contribute to a team where i can grow, learn and make a real
-              impact.
-            </p>
-            <p>
-              I believe in continuous learning and staying updated with the
-              latest technologies in the DevOps ecosystem.
-            </p>
-            <p>
-              Keep a lookout for my upcoming blog to discuss every project we
-              will be making.👀
-            </p>
-          </div>
-          <div class="skills-grid fade-in">
-            <div class="skill-item">Git</div>
-            <div class="skill-item">Python</div>
-            <div class="skill-item">Linux</div>
-            <div class="skill-item">AWS</div>
-            <div class="skill-item">Docker</div>
-            <div class="skill-item">Terraform</div>
-            <div class="skill-item">CI/CD</div>
-            <div class="skill-item">Ansible</div>
-            <div class="skill-item">Monitoring</div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="projects" class="projects">
-      <div class="container">
-        <h2 class="section-title fade-in">My Projects</h2>
-        <div class="projects-grid">
-          <div class="project-card fade-in">
-            <h3>CI/CD Pipeline for my site</h3>
-            <p>
-              This current website is built with a fully automated CI/CD
-              pipeline. It uses Github Actions, when i push code onto my main
-              branch it will autaomatiically deploy it to my Github Pages.
-              Helping avoid manual deployment steps and human errors, also
-              ensures my site is in sync with the latest version
-            </p>
-            <div class="tech-stack">
-              <span class="tech-tag">Git</span>
-              <span class="tech-tag">Github Actions</span>
-              <span class="tech-tag">Github Pages</span>
-              <span class="tech-tag">YAML</span>
+          <div class="links">
+            <div class="link-item">
+              <span class="platform">GitHub</span>
+              <a href="https://github.com/wegoagain00" target="_blank"
+                >@wegoagain</a
+              >
             </div>
-            <div class="project-links">
-              <a href="#" class="project-link">Documentation</a>
+            <div class="link-item">
+              <span class="platform">Twitter</span>
+              <a href="https://x.com/_wegoagain" target="_blank">@_wegoagain</a>
+            </div>
+            <div class="link-item">
+              <span class="platform">LinkedIn</span>
               <a
-                href="https://github.com/wegoagain00/my-devops-site"
-                class="project-link"
-                >GitHub</a
+                href="https://www.linkedin.com/in/tawfiq-a-379746198/"
+                target="_blank"
+                >/in/tawfiq-a-379746198/</a
+              >
+            </div>
+            <div class="link-item">
+              <span class="platform">Email</span>
+              <a href="mailto:tawfiqrahman00@gmail.com"
+                >tawfiqrahman00@gmail.com</a
               >
             </div>
           </div>
+        </section>
 
-          <div class="project-card fade-in">
-            <h3>tbc</h3>
-            <p>tbc</p>
-            <div class="tech-stack">
-              <span class="tech-tag">tbc</span>
-              <span class="tech-tag">tbc</span>
-              <span class="tech-tag">tbc</span>
-              <span class="tech-tag">tbc</span>
+        <section id="projects" class="section">
+          <h2>Projects</h2>
+          <div class="projects-grid">
+            <div class="project-card">
+              <h3>Three Tier Architecture with AWS</h3>
+              <p>
+                A comprehensive project demonstrating a three-tier architecture
+                using AWS services like EC2, RDS, and S3. It includes VPC setup,
+                security groups, and load balancing for high availability.
+              </p>
+              <div class="project-tags">
+                <span class="tag">AWS</span>
+                <span class="tag">Terraform</span>
+              </div>
+              <a
+                href="https://github.com/wegoagain00"
+                target="_blank"
+                class="project-link"
+                >View on GitHub</a
+              >
             </div>
-            <div class="project-links">
-              <a href="#" class="project-link">Documentation</a>
-              <a href="#" class="project-link">GitHub</a>
+            <div class="project-card">
+              <h3>CI/CD Pipeline for my Site</h3>
+              <p>
+                A CI/CD pipeline project that automates the deployment of my
+                personal website using GitHub Actions. It includes build, test,
+                and deployment stages to ensure code quality and reliability.
+                Helping avoid manual deployment steps and human errors.
+              </p>
+              <div class="project-tags">
+                <span class="tag">Github Actions</span>
+                <span class="tag">CI/CD</span>
+                <span class="tag">YAML</span>
+              </div>
+              <a
+                href="https://github.com/wegoagain00/my-devops-site"
+                target="_blank"
+                class="project-link"
+                >View on GitHub</a
+              >
             </div>
           </div>
-        </div>
-      </div>
-    </section>
+        </section>
 
-    <section id="contact" class="contact">
-      <div class="container">
-        <div class="contact-content">
-          <h2 class="section-title fade-in" style="color: white">
-            Get In Touch
-          </h2>
-          <p class="fade-in">
-            Let's discuss how we can work together to improve DevOps processes
-          </p>
-          <div class="contact-info">
-            <div class="contact-item fade-in">
-              <div class="contact-icon">📧</div>
-              <h3>Email</h3>
-              <p>tsdevelops00@gmail.com</p>
-            </div>
-            <div class="contact-item fade-in">
-              <div class="contact-icon">💼</div>
-              <h3>LinkedIn</h3>
-              <p>
-                <a
-                  style="color: white"
-                  href="https://www.linkedin.com/in/tawfiq-a-379746198/"
-                  >Click for my LinkedIn</a
-                >
-              </p>
-            </div>
-            <div class="contact-item fade-in">
-              <div class="contact-icon">🐙</div>
-              <h3>GitHub</h3>
-              <p>
-                <a style="color: white" href="https://github.com/wegoagain00"
-                  >Click for my GitHub</a
-                >
-              </p>
-            </div>
+        <section id="blog" class="section">
+          <h2>Blog</h2>
+          <div id="blog-posts">
+            <!-- Blog posts will be loaded here by JavaScript -->
           </div>
-        </div>
-      </div>
-    </section>
+        </section>
+      </main>
 
-    <footer>
-      <div class="container">
-        <p>
-          &copy; Tawfiqs Devops Portfolio. Built with passion for automation and
-          efficiency.
-        </p>
-      </div>
-    </footer>
+      <nav class="navigation">
+        <button class="nav-btn active" data-section="about">About</button>
+        <button class="nav-btn" data-section="projects">Projects</button>
+        <button class="nav-btn" data-section="blog">Blog</button>
+      </nav>
+
+      <footer>
+        <a href="https://github.com/wegoagain00" target="_blank">Source Code</a>
+      </footer>
+    </div>
 
     <script src="script.js"></script>
   </body>
