--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <main>
         <img
-          src="/Work Working GIF by Alliance.gif"
+          src="Work Working GIF by Alliance.gif"
           alt="Description"
           style="
             display: block;
