updates to my site with projects (more to come 😉)

--- a/index.html
+++ b/index.html
@@ -44,13 +44,10 @@
             (gym/football).
           </p>
           <p class="current">
-            Keep a lookout for my upcoming
-            <a href="#blog" style="color: inherit; text-decoration: underline"
-              >blog</a
-            >
-            to discuss every project I'll be making 👀. I'm currently upskilling
-            and mastering Docker, Kubernetes and Terraform also experimenting
-            with the latest DevOps tools and practices.
+            Keep a lookout for my upcoming blog to discuss every project I'll be
+            making 👀. I'm currently upskilling and mastering Docker, Kubernetes
+            and Terraform also experimenting with the latest DevOps tools and
+            practices.
           </p>
           <p class="current">
             Feel free to connect with me on social media or drop me an email.
